# CeleX-SDK

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
CeleX/base/: dataqueue.cpp  dataqueue.h  filedirectory.cpp  filedirectory.h  xthread.cpp  xthread.h
CeleX/configproc/: celex5cfgmgr.cpp  celex5cfgmgr.h  wireincommand.cpp  wireincommand.h  xmlreader.cpp  xmlreader.h
CeleX/configproc/tinyxml/: tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
CeleX/cx3driver/: bulktransfer.cpp  bulktransfer.h  celedriver.cpp  celedriver.h  cypress.cpp  cypress.h  package.cpp  package.h  usbinterface.cpp  usbinterface.h
CeleX/eventproc/: celex5.cpp  celex5dataprocessor.cpp  celex5dataprocessor.h  celex5processeddata.cpp  dataprocessthread.cpp  dataprocessthread.h  datarecorder.cpp  datarecorder.h
CeleX/include/: celextypes.h
CeleX/include/celex5/: celex5.h  celex5processeddata.h
CeleXDemo/: CMakeLists.txt  celex5cfg.cpp  celex5cfg.h  celex5widget.cpp  celex5widget.h  cfgslider.cpp  cfgslider.h  configwidget.cpp  configwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  qcustomplot.cpp  qcustomplot.h  settingswidget.cpp  settingswidget.h  sliderwidget.cpp  sliderwidget.h  videostream.cpp  videostream.h
CeleXDemo/ffmpeg/include/libavcodec/: avcodec.h  avdct.h  d3d11va.h  dirac.h  dv_profile.h  dxva2.h  vaapi.h  vdpau.h  version.h  xvmc.h
CeleXDemo/ffmpeg/include/libavdevice/: avdevice.h  version.h
CeleXDemo/ffmpeg/include/libavfilter/: avfilter.h  buffersink.h  buffersrc.h  version.h
CeleXDemo/ffmpeg/include/libavformat/: avformat.h  avio.h  version.h
CeleXDemo/ffmpeg/include/libavutil/: adler32.h  attributes.h  audio_fifo.h  avassert.h  avstring.h  avutil.h  bprint.h  bswap.h  buffer.h  camellia.h  channel_layout.h  common.h  cpu.h  crc.h  dict.h  encryption_info.h  error.h  eval.h  fifo.h  file.h  frame.h  hmac.h  hwcontext.h  hwcontext_cuda.h  hwcontext_qsv.h  imgutils.h  intreadwrite.h  log.h  macros.h  mathematics.h  mem.h  opt.h  parseutils.h  pixdesc.h  pixelutils.h  pixfmt.h  rational.h  ripemd.h  samplefmt.h  sha512.h  (+7 more)
CeleXDemo/ffmpeg/include/libpostproc/: postprocess.h  version.h
CeleXDemo/ffmpeg/include/libswresample/: swresample.h  version.h
CeleXDemo/ffmpeg/include/libswscale/: swscale.h  version.h
CeleXDemo/include/celex5/: celex5.h  celex5datamanager.h
Samples/: CMakeLists.txt
Samples/ConvertBinToCSV/: CMakeLists.txt  convertBinToCSV.cpp
